--- a/css/app.css
+++ b/css/app.css
@@ -178,3 +178,112 @@ span.highlight {
 figcaption {
   text-align: center;
 }
+
+.full-slider-container{
+  width: auto;
+  height: auto;
+  overflow: auto;
+}
+
+.video-container{
+  /* position: right; */
+  /* float: left; */
+  /* height: 100vh; */
+  /* width: 100%; */
+  padding-top: 20px;
+  overflow: hidden;
+  display: none;
+}
+
+.base-task{
+  background-color: #e5e5e5;
+  border-radius: 3px;
+  padding-top: 20px;
+  margin-right: 10px;
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  height: auto;
+  width: auto;
+  margin-top: -0px;
+  padding: 4px;
+  color: rgb(255, 253, 253);
+  background-color: rgba(145, 143, 143, 0.8);
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.3s ease;
+  border-radius: 3px 3px 3px 3px;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 3px 3px 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+.active, .dot:hover {
+  outline: auto;
+  outline-color: #d0cece;
+}
+
+/* .dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+} */
+
+
+.dot {
+  cursor: pointer;
+  height: auto;
+  width: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0px 0px;
+  background-color: #bbb;
+  border-radius: 3px 3px 3px 3px;
+  /* border-radius: 50%; */
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.vis {
+  background-color: #caebbb;
+}
+.sem{
+  background-color: #ffdeca;
+}
+.beh{
+  background-color: #cce6ff;
+}
+.vb{
+  background-color: #d3ffee;
+}
+.sb{
+  background-color: #efdeff;
+}
+.vsb{
+  background-color: #e5e5e5;
+}
